2009-07-29  John W. Eaton  <jwe@octave.org>

	* ov-bool.cc (octave_bool::load_ascii): Call template function to
	read value.
	* ov-scalar.cc (octave_scalar::load_ascii): Likewise.
	* ov-complex.cc (octave_complex::load_ascii): Likewise.
	* ov-float.cc (octave_float_scalar::load_ascii): Likewise.
	* ov-flt-complex.cc (octave_float_complex::load_ascii): Likewise.
	* ls-mat-ascii.cc (read_mat_ascii_data): Likewise.

	* ov-re-sparse.cc (octave_sparse_matrix::load_binary,
	octave_sparse_matrix::load_hdf5): Perform sanity check on indices.
	* ov-cx-sparse.cc (octave_sparse_complex_matrix::load_binary,
	octave_sparse_complex_matrix::load_hdf5): Likewise.
	* ov-bool-sparse.cc (octave_sparse_bool_matrix::load_binary,
	octave_sparse_bool_matrix::load_hdf5): Likewise.

2009-07-29  Jaroslav Hajek  <highegg@gmail.com>

	* ov-fcn-handle.cc (octave_fcn_handle::do_multi_index_op):
	Cache lookups also for classes.

2009-07-28  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Support auto-expanding scalar
	cells.

2009-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.cc (symbol_table::fcn_info::fcn_info_rep::xfind,
	symbol_table::fcn_info::fcn_info_rep::find,
	symbol_table::fcn_info::fcn_info_rep::find_function,
	symbol_table::fcn_info::find,
	symbol_table::fcn_info::find_function,
	symbol_table::find, symbol_table::do_find,
	symbol_table::find_function):
	Add local_funcs parameter.
	* symtab.h: Update decls.
	* ov-fcn-handle.cc (make_fcn_handle): Add local_funcs parameter.
	* ov-fcn-handle.h: Update decls.

2009-07-24  John W. Eaton  <jwe@octave.org>

	* pt-mat.cc (DO_SINGLE_TYPE_CONCAT_NO_MUTATE): New macro.
	(tree_matrix::rvalue1): Use it to avoid complex -> real conversion.

2009-07-24  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCIONS/cellfun.cc (Fcellfun): Avoid double error messages.

2009-07-24  Jaroslav Hajek  <highegg@gmail.com>

	* load-path.cc (load_path::do_any_class_method): New method.