@@ -279,7 +279,7 @@ SCALAR_MAPPER (erfc, ::erfcf)
 SCALAR_MAPPER (gamma, xgamma)
 CD_SCALAR_MAPPER (lgamma, xlgamma, xlgamma, 0.0, octave_Float_Inf)
 SCALAR_MAPPER (abs, ::fabsf)
-SCALAR_MAPPER (acos, ::acosf)
+CD_SCALAR_MAPPER (acos, ::acosf, ::acos, -1.0, 1.0)
 CD_SCALAR_MAPPER (acosh, ::acoshf, ::acosh, 1.0, octave_Float_Inf)
 SCALAR_MAPPER (angle, ::arg)
 SCALAR_MAPPER (arg, ::arg)
