@@ -294,7 +294,7 @@ SCALAR_MAPPER (erfc, ::erfc)
 SCALAR_MAPPER (gamma, xgamma)
 CD_SCALAR_MAPPER (lgamma, xlgamma, xlgamma, 0.0, octave_Inf)
 SCALAR_MAPPER (abs, ::fabs)
-SCALAR_MAPPER (acos, ::acos)
+CD_SCALAR_MAPPER (acos, ::acos, ::acos, -1.0, 1.0)
 CD_SCALAR_MAPPER (acosh, ::acosh, ::acosh, 1.0, octave_Inf)
 SCALAR_MAPPER (angle, ::arg)
 SCALAR_MAPPER (arg, ::arg)
